--- a/leaseslicensing/templates/leaseslicensing/base.html
+++ b/leaseslicensing/templates/leaseslicensing/base.html
@@ -36,7 +36,14 @@
 
             </script>
             <script type="text/javascript" src="{% static 'leaseslicensing_vue/js/chunk-vendors.js' %}?v={{build_tag}}"></script>
-            <script type="text/javascript" src="{% static 'leaseslicensing_vue/js/app.js' %}?v={{build_tag}}"></script>
+
+            {% if app_build_url %}
+                <script type="text/javascript" src="{{ app_build_url }}"></script>
+            {% else %}
+                <script type="text/javascript" src="{% static 'leaseslicensing_vue/js/app.js' %}?v={{build_tag}}"></script>
+            {% endif %}
+
+
 
         {% endblock %}
         {% block menu_spacer %}
