Added changes to the design and functions of the ol map

--- a/leaseslicensing/static/leaseslicensing/css/map.css
+++ b/leaseslicensing/static/leaseslicensing/css/map.css
@@ -99,7 +99,7 @@
     cursor: pointer;
 }
 .layer_menu {
-    height: 400px;
+    max-height: 400px;
     overflow-y: auto;
     overflow-x: hidden;
 }
