Added polygon delete button and DBCA layer property popup bubble

--- a/leaseslicensing/static/leaseslicensing/css/map.css
+++ b/leaseslicensing/static/leaseslicensing/css/map.css
@@ -64,6 +64,7 @@
     cursor: pointer;
     display: block;
     padding: 4px;
+    text-align: center;
 }
 .optional-layers-button-active {
     position: relative;
@@ -73,6 +74,7 @@
     cursor: pointer;
     display: block;
     padding: 4px;
+    text-align: center;
 }
 .svg-icon {
     /* First make img black then invert to white */
