--- a/leaseslicensing/templates/leaseslicensing/base.html
+++ b/leaseslicensing/templates/leaseslicensing/base.html
@@ -47,6 +47,21 @@
 
         {% endblock %}
 
+        {% block menu_items_left_brand %}
+            {% is_internal as is_internal_login %}
+            <div class="navbar-nav">
+                    <div class="nav-item">
+                        <a class="nav-link" href="{% url 'home'%}"><img src="/static/img/pwl_icon.png">
+                            {% if is_internal_login %}
+                                Applications
+                            {% else %}
+                                Home
+                            {% endif %}
+                        </a>
+                    </div>
+            </div>
+        {% endblock %}
+
         {% block menu_items2_right %}
         {% if request.user.is_authenticated %}
 
@@ -60,5 +75,3 @@
         {% endblock %}
     </body>
 </html>
-
-
