--- a/leaseslicensing/templates/ledgerui/accounts_base_b5.html
+++ b/leaseslicensing/templates/ledgerui/accounts_base_b5.html
@@ -1,4 +1,22 @@
 {% extends "ledgerui/accounts_base_b5.html" %}
 
+{% load users %}
+
 {% block myaccount_nav %}
+{% endblock %}
+
+
+{% block menu_items_left_brand %}
+    {% is_internal as is_internal_login %}
+    <div class="navbar-nav">
+            <div class="nav-item">
+                <a class="nav-link" href="{% url 'home'%}"><img src="/static/img/pwl_icon.png">
+                    {% if is_internal_login %}
+                        Applications
+                    {% else %}
+                        Home
+                    {% endif %}
+                </a>
+            </div>
+    </div>
 {% endblock %}
