Added route for invoices page.

--- a/leaseslicensing/templates/webtemplate_dbca/includes/primary_menu.html
+++ b/leaseslicensing/templates/webtemplate_dbca/includes/primary_menu.html
@@ -17,7 +17,7 @@
 <li class="nav-item"><a class="nav-link" href="/internal/approvals">Approvals</a></li>
 <li class="nav-item"><a class="nav-link" href="/internal/compliances">Compliances</a></li>
 <li class="nav-item"><a class="nav-link" href="/internal/organisations/access">Organisation Access</a></li>
-<li class="nav-item"><a class="nav-link" href="">Invoices</a></li>
+<li class="nav-item"><a class="nav-link" href="/internal/invoices">Invoices</a></li>
 <li class="nav-item"><a class="nav-link" href="/internal/search">Search</a></li>
 {% else %}
 {% endif %}
