--- a/leaseslicensing/templates/leaseslicensing/index.html
+++ b/leaseslicensing/templates/leaseslicensing/index.html
@@ -1,6 +1,8 @@
 {% extends 'leaseslicensing/base.html' %}
 
 {% load static %}
+{% load utils %}
+{% system_name as system_name %}
 
 {% block left_menu_items %}
     <li><a  href="{% url 'ds_contact' %}">Contact Us</a></li>
@@ -15,7 +17,7 @@
         <div class="row">
             <div class="col-md-8">
                 <h2>
-                    Welcome to the {{system_name}} System
+                    Welcome to the {% system_name %} System
                 </h2>
             </div>
         </div>
