--- a/leaseslicensing/templates/leaseslicensing/base.html
+++ b/leaseslicensing/templates/leaseslicensing/base.html
@@ -25,6 +25,7 @@
         {% block header_top_menu %}
         {% endblock %}
         {% block extra_css %}
+            <link rel="stylesheet" href="{% static 'leaseslicensing/css/base.css' %}?v={{build_tag}}">
             <link rel="stylesheet" href="{% static 'leaseslicensing_vue/css/app.css' %}?v={{build_tag}}">
             <link rel="stylesheet" href="{% static 'leaseslicensing_vue/css/chunk-vendors.css' %}?v={{build_tag}}">
         {% endblock %}
