--- a/leaseslicensing/static/leaseslicensing/css/base.css
+++ b/leaseslicensing/static/leaseslicensing/css/base.css
@@ -3,6 +3,10 @@ div#app .container {
     padding: 0 36px 0 36px;
 }
 
+.navbar button {
+    width:160px;
+}
+
 .topmast {
     height: 115px;
     padding-top: 0px;
