--- a/leaseslicensing/templates/leaseslicensing/index.html
+++ b/leaseslicensing/templates/leaseslicensing/index.html
@@ -12,6 +12,9 @@
 {% block messages %}
 {% endblock %}
 
+{% block custom_js %}
+{% endblock %}
+
 {% block content %}
     <div class="container">
         <div class="row">
