--- a/leaseslicensing/static/leaseslicensing/css/base.css
+++ b/leaseslicensing/static/leaseslicensing/css/base.css
@@ -3,6 +3,18 @@ div#app .container {
     padding: 0 36px 0 36px;
 }
 
+.licensing-btn-primary {
+    color: #fff;
+    background-color: #226fbb;
+    min-width:150px;
+}
+
+.licensing-btn-primary:hover {
+    color: #fff;
+    background-color: #5393d2;
+}
+
+
 .navbar button {
     width:160px;
 }
