--- a/leaseslicensing/static/leaseslicensing/css/base.css
+++ b/leaseslicensing/static/leaseslicensing/css/base.css
@@ -3,6 +3,10 @@ div#app .container {
     padding: 0 36px 0 36px;
 }
 
+.licensing-btn {
+    min-width:150px;
+}
+
 .licensing-btn-primary {
     color: #fff;
     background-color: #226fbb;
