--- a/leaseslicensing/static/leaseslicensing/css/base.css
+++ b/leaseslicensing/static/leaseslicensing/css/base.css
@@ -34,6 +34,10 @@ table.dataTable a:hover {
     color: #5393d2;
 }
 
+.dt-buttons {
+    margin-left:8px;
+}
+
 .page-item.active > .page-link {
     color:#fff;
     background-color: #226fbb !important;
