--- a/leaseslicensing/templates/webtemplate_dbca/includes/primary_menu.html
+++ b/leaseslicensing/templates/webtemplate_dbca/includes/primary_menu.html
@@ -20,5 +20,7 @@
 <li class="nav-item"><a class="nav-link" href="/internal/invoices">Invoices</a></li>
 <li class="nav-item"><a class="nav-link" href="/internal/search">Search</a></li>
 {% else %}
+<li class="nav-item"><a class="nav-link" href="/external/proposal"><button type="button" class="btn btn-primary btn-sm" @click="new_application_button_clicked"><i
+    class="fa-solid fa-circle-plus"></i> New Application</button></a></li>
 {% endif %}
 </ul>
