Added competitive process winner email notification

--- a/leaseslicensing/components/competitive_processes/templates/leaseslicensing/emails/competitive_processes/send_winner_notification.html
+++ b/leaseslicensing/components/competitive_processes/templates/leaseslicensing/emails/competitive_processes/send_winner_notification.html
@@ -1,5 +1,7 @@
 {%  extends 'leaseslicensing/emails/base_email.html' %}
 
 {%  block content %}
-    <p>(notification email body)<p>
+    <p>You are the winner of the Competitive Process {{ competitive_process.lodgement_number }} and are invited to apply for a lease or license.</p>
+    <p>You can access this Application using the following link:</p>
+    <a href="{{ url }}">Access Lease or License Application</a>
 {%  endblock %}
