--- a/leaseslicensing/static/leaseslicensing/css/base.css
+++ b/leaseslicensing/static/leaseslicensing/css/base.css
@@ -195,3 +195,43 @@ table.dataTable a:hover {
     font-family: 'Courier New', Courier monospace;
     margin: 5px;
 }
+
+.top-buffer-s {
+    margin-top: 10px;
+}
+
+/* Styles for nav pills tabs */
+
+.nav-pills .nav-item {
+    margin-bottom: 2px;
+}
+
+.nav-pills .nav-item>li>a {
+    background-color: yellow !important;
+    color: #fff;
+}
+
+.nav-pills .nav-item>li.active>a,
+.nav-pills .nav-item>li.active>a:hover,
+.nav-pills .nav-item>li.active>a:focus {
+    color: white;
+    background-color: blue;
+    border: 1px solid #888888;
+}
+
+
+.nav-pills .nav-link {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    border-top-left-radius: 0.5em;
+    border-top-right-radius: 0.5em;
+    margin-right: 0.25em;
+}
+
+.nav-pills .nav-link {
+    background: lightgray;
+}
+
+.nav-pills .nav-link.active {
+    background: gray;
+}
