Added some space under the h3 tags to make design nicer.

--- a/leaseslicensing/static/leaseslicensing/css/base.css
+++ b/leaseslicensing/static/leaseslicensing/css/base.css
@@ -3,6 +3,10 @@ div#app .container {
     padding: 0 40px 0 40px;
 }
 
+div#app .container h3 {
+    margin-bottom: 22px;
+}
+
 .btn-primary{
     color: #fff  !important;
     background-color: #226fbb !important;
