Custom class for when we need the sweet alert 2 modal to be wider.

--- a/leaseslicensing/static/leaseslicensing/css/base.css
+++ b/leaseslicensing/static/leaseslicensing/css/base.css
@@ -189,3 +189,9 @@ table.dataTable a:hover {
 .nav-pills .nav-link.active {
     background: gray;
 }
+
+/* Sweet alert 2 styles */
+
+.swal-wide{
+    width:650px !important;
+}
