Added application type display name.

--- a/leaseslicensing/components/proposals/templates/leaseslicensing/emails/proposals/send_referral_notification.html
+++ b/leaseslicensing/components/proposals/templates/leaseslicensing/emails/proposals/send_referral_notification.html
@@ -2,11 +2,14 @@
 
 {%  block content %}
     {% if reminder %}
-        <p>This is a reminder for a referral for Application <strong>{{proposal.lodgement_number}}</strong> that has been sent to you:</p>
+        <p>This is a reminder for a referral for {{ proposal.application_type.name_display }} Application <strong>{{proposal.lodgement_number}}</strong> that has been sent to you:</p>
     {% else %}
-        <p>A Registration of Interest <strong>{{ proposal.lodgement_number }}</strong> is ready for your advice.</p>
+        <p>{{ proposal.application_type.name_display }} Application: <strong>{{ proposal.lodgement_number }}</strong> is ready for your advice.</p>
+
         <p>Comments: {{comments}}</p>
     {% endif %}
-    <p>You can access this Registration of Interest using the following link:</p>
-    <a href="{{ url }}">Access Registration of Interest</a>
+
+        <p>You can access this {{ proposal.application_type.name_display }} Application using the following link:</p>
+
+        <a href="{{ url }}">Access {{ proposal.application_type.name_display }} Application</a>
 {%  endblock %}
