--- a/leaseslicensing/static/leaseslicensing/css/base.css
+++ b/leaseslicensing/static/leaseslicensing/css/base.css
@@ -152,6 +152,15 @@ table.dataTable a:hover {
     background-color: #f5f5f5;
 }
 
+.form-floating textarea {
+    padding-top: 40px !important;
+    height: 70px !important;
+    font-style: italic !important;
+    color: #999 !important;
+    padding-top: 36px !important;
+    font-size: 14px !important;
+}
+
 /* Styles for datatables */
 
 .top-buffer-s {
