Change height to min-height for assessment comment textareas.

--- a/leaseslicensing/static/leaseslicensing/css/base.css
+++ b/leaseslicensing/static/leaseslicensing/css/base.css
@@ -154,7 +154,7 @@ table.dataTable a:hover {
 
 .form-floating textarea {
     padding-top: 40px !important;
-    height: 70px !important;
+    min-height: 70px !important;
     font-style: italic !important;
     color: #999 !important;
     padding-top: 36px !important;
