Update proposal text to compliance text.

--- a/leaseslicensing/components/compliances/templates/leaseslicensing/emails/compliances/send_referral_complete_notification.html
+++ b/leaseslicensing/components/compliances/templates/leaseslicensing/emails/compliances/send_referral_complete_notification.html
@@ -1,7 +1,7 @@
 {%  extends 'leaseslicensing/emails/base_email.html' %}
 
 {%  block content %}
-        <p>A referral for {{ application_type }} Application: <strong>{{ proposal.lodgement_number }}</strong> has been completed by {{ completed_by }}</p>
+        <p>A referral for Compliance: <strong>{{ compliance.lodgement_number }}</strong> has been completed by {{ completed_by }}</p>
 
         <p>Referral Comments: {{ referral_comments }}</p>
 
