--- a/leaseslicensing/static/leaseslicensing/css/base.css
+++ b/leaseslicensing/static/leaseslicensing/css/base.css
@@ -35,14 +35,6 @@ div#app .container h3 {
     color: #226fbb;
 }
 
-table.dataTable a {
-    color: #226fbb;
-}
-
-table.dataTable a:hover {
-    color: #5393d2;
-}
-
 .dt-buttons {
     margin-left:8px;
 }
@@ -252,4 +244,67 @@ table.dataTable a:hover {
 
 .multiselect__option--highlight::after {
     background: #226fbb !important;
+}
+
+
+/* Datatables styles */
+
+
+table.dataTable a {
+    color: #226fbb;
+}
+
+table.dataTable a:hover {
+    color: #5393d2;
+}
+
+
+.collapse-icon {
+    cursor: pointer;
+}
+
+.collapse-icon::before {
+    top: 5px;
+    left: 4px;
+    height: 14px;
+    width: 14px;
+    border-radius: 14px;
+    line-height: 14px;
+    border: 2px solid white;
+    line-height: 14px;
+    content: '-';
+    color: white;
+    background-color: #d33333;
+    display: inline-block;
+    box-shadow: 0px 0px 3px #444;
+    box-sizing: content-box;
+    text-align: center;
+    text-indent: 0 !important;
+    font-family: 'Courier New', Courier monospace;
+    margin: 5px;
+}
+
+.expand-icon {
+    cursor: pointer;
+}
+
+.expand-icon::before {
+    top: 5px;
+    left: 4px;
+    height: 14px;
+    width: 14px;
+    border-radius: 14px;
+    line-height: 14px;
+    border: 2px solid white;
+    line-height: 14px;
+    content: '+';
+    color: white;
+    background-color: #337ab7;
+    display: inline-block;
+    box-shadow: 0px 0px 3px #444;
+    box-sizing: content-box;
+    text-align: center;
+    text-indent: 0 !important;
+    font-family: 'Courier New', Courier monospace;
+    margin: 5px;
 }
