--- a/leaseslicensing/components/invoicing/templates/leaseslicensing/emails/invoicing/send_new_invoice_raised_notification.html
+++ b/leaseslicensing/components/invoicing/templates/leaseslicensing/emails/invoicing/send_new_invoice_raised_notification.html
@@ -5,7 +5,11 @@
             A new invoice has been raised for {{ approval.approval_type }} {{ approval.lodgement_number }}.
         </p>
 
-        <a href="{{pay_now_url}}">Pay This Invoice</a>
+        <p>
+            <strong>Due Date: {{ invoice.date_due }}</strong>
+        </p>
 
         <a href="{{external_invoices_url}}">View All Your Invoices</a>
+
+        <a href="{{pay_now_url}}">Pay This Invoice</a>
 {%  endblock %}
