--- a/leaseslicensing/components/approvals/templates/leaseslicensing/emails/approval_crown_land_rent_review_notification.html
+++ b/leaseslicensing/components/approvals/templates/leaseslicensing/emails/approval_crown_land_rent_review_notification.html
@@ -1,7 +1,7 @@
 {%  extends 'leaseslicensing/emails/base_email.html' %}
 
 {%  block content %}
-            <p>Approval {{ approval.lodgement_number }} is due for a crown land rent review.</p>
+            <p>Approval {{ approval.lodgement_number }} is due for a crown land rent review {{ due_text }}.</p>
 
             <p><strong>Crown Land Rent Review Frequency:</strong> Every {{ invoicing_details.review_once_every }} {{ invoicing_details.review_repetition_type }}</p>
         {% if approval.next_review_date %}
