--- a/leaseslicensing/static/leaseslicensing/css/base.css
+++ b/leaseslicensing/static/leaseslicensing/css/base.css
@@ -328,3 +328,9 @@ table.dataTable a:hover {
     font-family: 'Courier New', Courier monospace;
     margin: 5px;
 }
+
+/* Custom spinner - Todo: Make the bootstrap spinner component more robust in the gov vue3 utils package */
+.invoice-preview-spinner .spinner-center-component {
+    margin-top: 0px !important;
+    margin-left: 0px !important;
+}
