--- a/leaseslicensing/components/compliances/templates/leaseslicensing/emails/compliances/send_external_submit_notification.html
+++ b/leaseslicensing/components/compliances/templates/leaseslicensing/emails/compliances/send_external_submit_notification.html
@@ -1,17 +1,19 @@
 {%  extends 'leaseslicensing/emails/base_email.html' %}
 
 {%  block content %}
-	Your document to complete a requirement {{ compliance.reference }} of your licence has been submitted.<br>
+            <p>Compliance: {{ compliance.reference }} for your {{ compliance.approval.approval_type.name }} has been submitted.</p>
 
-	Submitter: {{ compliance.submitter.get_full_name }}<br>
-	Lodgement date: {{ compliance.lodgement_date }}
+            <p>
+                <strong>Submitter:</strong> {{ compliance.submitter.get_full_name }}<br>
+                <strong>Lodgement date:</strong> {{ compliance.lodgement_date }}
+            </p>
 
-	<p>You will receive a confirmation email, and it will show up on your account if the document meets the requirement.</p>
+            <p>You will receive a confirmation email, and it will show up on your account if the document meets the requirement.</p>
 
-	<p>You will receive a notification email if there is any incomplete information or documents missing.</p>
+            <p>You will receive a notification email if there is any incomplete information or documents missing.</p>
 
-    <p>
-        You can access this Compliance using the following link:
-    </p>
-    <a href="{{url}}">Access Compliance</a>
+            <p>
+                You can access this Compliance using the following link:
+            </p>
+            <a href="{{url}}">Access Compliance</a>
 {%  endblock %}
