--- a/leaseslicensing/components/compliances/templates/leaseslicensing/emails/compliances/send_submit_notification.html
+++ b/leaseslicensing/components/compliances/templates/leaseslicensing/emails/compliances/send_submit_notification.html
@@ -1,12 +1,11 @@
 {%  extends 'leaseslicensing/emails/base_email.html' %}
 
 {%  block content %}
-	The Compliance {{ compliance.reference }} has been submitted and can be assessed.
+            <p>The Compliance {{ compliance.reference }} has been submitted and can be assessed.</p>
 
-    <p>
-    You can access this Compliance using the following link:
-    </p>
-    <a href="{{url}}">Access Compliance</a>
+            <p>
+                You can access this Compliance using the following link:
+            </p>
 
-
+            <a href="{{url}}">Access Compliance</a>
 {%  endblock %}
