--- a/leaseslicensing/static/leaseslicensing/css/base.css
+++ b/leaseslicensing/static/leaseslicensing/css/base.css
@@ -7,6 +7,11 @@ div#app .container h3 {
     margin-bottom: 22px;
 }
 
+.parks_bg_banner .col-lg-9 {
+    display: flex !important;
+    align-items: center !important;
+}
+
 .btn-primary {
     color: #fff !important;
     background-color: #226fbb !important;
