Change Application to Proposal.

--- a/leaseslicensing/templates/webtemplate_dbca/includes/primary_menu.html
+++ b/leaseslicensing/templates/webtemplate_dbca/includes/primary_menu.html
@@ -22,7 +22,7 @@
 {% else %}
 {% if request.user.is_authenticated %}
 <li class="nav-item"><a class="nav-link" href="/external/proposal"><button type="button" class="btn btn-primary btn-sm" @click="new_application_button_clicked"><i
-    class="fa-solid fa-circle-plus"></i> New Application</button></a></li>
+    class="fa-solid fa-circle-plus"></i> New Proposal</button></a></li>
     <li class="nav-item"><a class="nav-link" href="/external/invoices">Invoices</a></li>
     {% endif %}
 {% endif %}
