Style radio buttons with the right background color.

--- a/leaseslicensing/static/leaseslicensing/css/base.css
+++ b/leaseslicensing/static/leaseslicensing/css/base.css
@@ -29,6 +29,10 @@ div#app .container h3 {
     margin-right: 2px;
 }
 
+.form-check-input:checked {
+    background-color:#226fbb !important;
+}
+
 .bg-primary {
     background-color: #226fbb !important;
 }
@@ -59,6 +63,18 @@ div#app .container h3 {
 .btn-licensing {
     min-width: 150px;
 }
+
+.licensing-btn-primary {
+    color: #fff;
+    background-color: #226fbb;
+    min-width: 150px;
+}
+
+.licensing-btn-primary:hover {
+    color: #fff;
+    background-color: #5393d2;
+}
+
 
 .navbar button {
     width: 160px;
