Update references to 'application' to 'proposal' in comments, email templates and front end components.

--- a/leaseslicensing/components/organisations/templates/leaseslicensing/emails/organisation_link_notification.html
+++ b/leaseslicensing/components/organisations/templates/leaseslicensing/emails/organisation_link_notification.html
@@ -7,5 +7,5 @@
 
     <p><strong>ABN/ ACN: {{ organisation.abn}}</strong></p>
 
-    <p>You have been linked to this organisation and can now make applications on behalf of the organisation.</p>
+    <p>You have been linked to this organisation and can now lodge proposals on behalf of the organisation.</p>
 {%  endblock %}
