--- a/leaseslicensing/components/proposals/templates/leaseslicensing/emails/proposals/send_external_referee_invite.html
+++ b/leaseslicensing/components/proposals/templates/leaseslicensing/emails/proposals/send_external_referee_invite.html
@@ -23,12 +23,12 @@
     <p>Comments: {{external_referee_invite.invite_text}}</p>
 
     <p>
-        In order to submit your comments regarding the application you will need to create an account with
+        In order to submit your comments regarding the proposal you will need to create an account with
         our system. (If you already have an account with us you can simply log in as usual).
     </p>
 
     <p>
-        When you register and log in you will be able to see any applications that have been referred to you.
+        When you register and log in you will be able to see any proposals that have been referred to you.
     </p>
 
     <p>
