--- a/leaseslicensing/components/proposals/templates/leaseslicensing/emails/proposals/send_license_ready_for_invoicing_notification.html
+++ b/leaseslicensing/components/proposals/templates/leaseslicensing/emails/proposals/send_license_ready_for_invoicing_notification.html
@@ -1,11 +1,11 @@
 {%  extends 'leaseslicensing/emails/base_email.html' %}
 
 {%  block content %}
-	A lease or license application {{ proposal.lodgement_number }} has been approved and invoicing details can now be entered.
+	A lease or license proposal {{ proposal.lodgement_number }} has been approved and invoicing details can now be entered.
 
     <p>
-    You can access this Application using the following link:
+    You can access this Proposal using the following link:
     </p>
 
-    <a href="{{url}}">Access Application</a>
+    <a href="{{url}}">Access Proposal</a>
 {%  endblock %}
