--- a/leaseslicensing/components/proposals/templates/leaseslicensing/emails/proposals/send_external_submit_notification.html
+++ b/leaseslicensing/components/proposals/templates/leaseslicensing/emails/proposals/send_external_submit_notification.html
@@ -1,7 +1,7 @@
 {%  extends 'leaseslicensing/emails/base_email.html' %}
 
 {%  block content %}
-    <p>Your {{ proposal.application_type.confirmation_text }} application was successfully submitted </p>
+    <p>Your {{ proposal.application_type.confirmation_text }} proposal was successfully submitted </p>
 
     <p>
         <span>Reference Number:</span>
