--- a/leaseslicensing/templates/leaseslicensing/base.html
+++ b/leaseslicensing/templates/leaseslicensing/base.html
@@ -47,7 +47,7 @@
                     <div class="nav-item">
                         <a class="nav-link" href="{% url 'home'%}"><img src="/static/img/pwl_icon.png">
                             {% if is_internal_login %}
-                                Applications
+                                Proposals
                             {% else %}
                                 Home
                             {% endif %}
