--- a/leaseslicensing/components/proposals/templates/leaseslicensing/emails/proposals/send_decline_notification.html
+++ b/leaseslicensing/components/proposals/templates/leaseslicensing/emails/proposals/send_decline_notification.html
@@ -1,9 +1,13 @@
 {%  extends 'leaseslicensing/emails/base_email.html' %}
 
 {%  block content %}
-        <p>Your proposal for a lease or licence <strong>{{proposal.lodgement_number}}</strong> has been declined</p>
+            <p>Your proposal for a lease or licence <strong>{{proposal.lodgement_number}}</strong> has been declined</p>
 
-        <p>For further information please login to your account.</p>
+            {% if reason %}
+            <p>
+                <strong>Decline Reason:</strong> {{ reason }}
+            </p>
+            {% endif %}
 
-   		<p>If you have any queries regarding this decision please contact a licensing officer on {{settings.DEP_PHONE}}, or email {{settings.SUPPORT_EMAIL}}</p>
+            <p>If you have any queries regarding this decision please contact a licensing officer on {{settings.DEP_PHONE}}, or email {{settings.SUPPORT_EMAIL}}</p>
 {%  endblock %}
