Bug fix: Dev ops 4278 Submitter name is blank in email notification of condition is submitted- Submitter name is now showing.

--- a/leaseslicensing/components/compliances/templates/leaseslicensing/emails/compliances/send_external_submit_notification.html
+++ b/leaseslicensing/components/compliances/templates/leaseslicensing/emails/compliances/send_external_submit_notification.html
@@ -4,7 +4,7 @@
             <p>Compliance: {{ compliance.reference }} for your {{ compliance.approval.approval_type.name }} has been submitted.</p>
 
             <p>
-                <strong>Submitter:</strong> {{ compliance.submitter.get_full_name }}<br>
+                <strong>Submitter:</strong> {{ submitter_full_name }}<br>
                 <strong>Lodgement date:</strong> {{ compliance.lodgement_date }}
             </p>
 
