Replace is_payment_officer with is_finance_officer.

--- a/leaseslicensing/templates/leaseslicensing/base.html
+++ b/leaseslicensing/templates/leaseslicensing/base.html
@@ -12,7 +12,7 @@
 {% system_name as system_name %}
 {% system_name_short as system_name_short %}
 {% support_email as support_email %}
-{% is_payment_officer as is_payment_officer %}
+{% is_finance_officer as is_finance_officer %}
 {% build_tag as build_tag %}
 
 <!DOCTYPE html>
