--- a/leaseslicensing/templates/webtemplate_dbca/includes/primary_menu.html
+++ b/leaseslicensing/templates/webtemplate_dbca/includes/primary_menu.html
@@ -9,20 +9,31 @@
 {% system_name as system_name %}
 {% system_name_short as system_name_short %}
 {% support_email as support_email %}
-{% is_payment_officer as is_payment_officer %}
+{% is_assessor as is_assessor %}
+{% is_approver as is_approver %}
+{% is_finance_officer as is_finance_officer %}
+{% is_organisation_access_officer as is_organisation_access_officer %}
 {% build_tag as build_tag %}
 
 <ul class="nav navbar-expand-lg navbar-light align-items-center">
 {% if is_internal_login %}
+{% if is_assessor or is_finance %}
 <li class="nav-item"><a class="nav-link" href="/internal/approvals">Approvals</a></li>
 <li class="nav-item"><a class="nav-link" href="/internal/compliances">Compliances</a></li>
+{% endif %}
+{% if is_organisation_access_officer %}
 <li class="nav-item"><a class="nav-link" href="/internal/organisations/access">Organisation Access</a></li>
-<li class="nav-item"><a class="nav-link" href="/internal/invoices">Invoices</a></li>
-<li class="nav-item"><a class="nav-link" href="/internal/search">Search</a></li>
+{% endif %}
+    {% if is_assessor or is_finance %}
+    <li class="nav-item"><a class="nav-link" href="/internal/invoices">Invoices</a></li>
+    {% endif %}
+    {% if is_assessor or is_approver or is_finance %}
+    <li class="nav-item"><a class="nav-link" href="/internal/search">Search</a></li>
+    {% endif %}
 {% else %}
-{% if request.user.is_authenticated %}
-<li class="nav-item"><a class="nav-link" href="/external/proposal"><button type="button" class="btn btn-sm" style="color:#fff; background-color:#226fbb; width:140px;" @click="new_application_button_clicked"><i
-    class="fa-solid fa-circle-plus"></i> New Proposal</button></a></li>
+    {% if request.user.is_authenticated %}
+    <li class="nav-item"><a class="nav-link" href="/external/proposal"><button type="button" class="btn btn-sm" style="color:#fff; background-color:#226fbb; width:140px;" @click="new_application_button_clicked"><i
+        class="fa-solid fa-circle-plus"></i> New Proposal</button></a></li>
     <li class="nav-item"><a class="nav-link" href="/external/invoices">Invoices</a></li>
     {% endif %}
 {% endif %}
