--- a/leaseslicensing/components/invoicing/templates/leaseslicensing/emails/invoicing/send_new_invoice_raised_internal_notification.html
+++ b/leaseslicensing/components/invoicing/templates/leaseslicensing/emails/invoicing/send_new_invoice_raised_internal_notification.html
@@ -16,6 +16,6 @@
             <tr><td>&bull;</td><td>Enter the oracle invoice number on the invoice record</td></tr>
             <tr><td>&bull;</td><td>You will be prompted to confirm sending the request for payment to the proponent</td></tr>
         </table>
-
-        <a href="{{url}}">View Invoice Records</a>
+        <br />
+        <a href="{{internal_invoices_url}}">View Invoice Records</a>
 {%  endblock %}
