--- a/leaseslicensing/components/approvals/templates/leaseslicensing/emails/approval_custom_cpi_entry_notification.html
+++ b/leaseslicensing/components/approvals/templates/leaseslicensing/emails/approval_custom_cpi_entry_notification.html
@@ -1,15 +1,9 @@
 {%  extends 'leaseslicensing/emails/base_email.html' %}
 
 {%  block content %}
-            <p>Approval {{ approval.lodgement_number }} requires a custom cpi percentage to be entered within {{ days_left }}.</p>
+            <p>Approval {{ approval.lodgement_number }} requires a custom cpi percentage to be entered within {{ days_before_issue_date }}.</p>
 
-            <p>If no custom cpi percentage is entered for this</p>
+            <p>If no custom cpi percentage is entered for the coming billing period then no cpi change will be applied to the base fee.</p>
 
-            <p><strong>Crown Land Rent Review Frequency:</strong> Every {{ invoicing_details.review_once_every }} {{ invoicing_details.review_repetition_type }}</p>
-        {% if approval.next_review_date %}
-            <p><strong>Next Review Date:</strong> {{ approval.next_review_date}}</p>
-        {% else %}
-            <p>This is the final crown land rent review for this approval.</p>
-        {% endif %}
-            <p><a href="{{ url }}">View Approval {{ approval.lodgement_number }}</a></p>
+            <p><a href="{{url}}">View Approval {{ approval.lodgement_number }}</a></p>
 {%  endblock %}
