Change references to proponent to 'lease/licence holder' in cases where an approval has already been generated.

--- a/leaseslicensing/components/invoicing/templates/leaseslicensing/emails/invoicing/send_new_invoice_raised_internal_notification.html
+++ b/leaseslicensing/components/invoicing/templates/leaseslicensing/emails/invoicing/send_new_invoice_raised_internal_notification.html
@@ -14,7 +14,7 @@
             <tr><td>&bull;</td><td>Convert it to a digital format &#40;i.e. pdf&#41;</td></tr>
             <tr><td>&bull;</td><td>Upload that invoice file to the invoice record</td></tr>
             <tr><td>&bull;</td><td>Enter the oracle invoice number on the invoice record</td></tr>
-            <tr><td>&bull;</td><td>You will be prompted to confirm sending the request for payment to the proponent</td></tr>
+            <tr><td>&bull;</td><td>You will be prompted to confirm sending the request for payment to the lease/licence holder</td></tr>
         </table>
         <br />
         <a href="{{internal_invoices_url}}">View Invoice Records</a>
