--- a/leaseslicensing/components/organisations/templates/leaseslicensing/emails/organisation_contact_decline_notification.html
+++ b/leaseslicensing/components/organisations/templates/leaseslicensing/emails/organisation_contact_decline_notification.html
@@ -1,9 +1,10 @@
 {%  extends 'leaseslicensing/emails/base_email.html' %}
 
 {%  block content %}
-     <p>Your Organisation link request has been declined from:</p>
+     <p>Your request to link the following organisation has been declined:</p>
         <p><strong>Organisation : {{ organisation.name }}</strong></p>
         <p><strong>ABN : {{ organisation.abn}}</strong></p>
 
-    <p>You can not lodge proposals on behalf of this organisation now.</p>
+    <p>As a result, you can not lodge proposals on behalf of this organisation.</p>
+
 {%  endblock %}
