--- a/leaseslicensing/components/invoicing/templates/leaseslicensing/emails/invoicing/send_new_invoices_raised_internal_notification.html
+++ b/leaseslicensing/components/invoicing/templates/leaseslicensing/emails/invoicing/send_new_invoices_raised_internal_notification.html
@@ -12,7 +12,7 @@
         </ul>
 
         <p>
-            Before payment can be requested from the proponent, the following steps must be taken for each invoice record:
+            Before payment can be requested from the lease/licence holder, the following steps must be taken for each invoice record:
         </p>
 
         <table>
