--- a/leaseslicensing/components/invoicing/templates/leaseslicensing/emails/invoicing/send_new_invoice_raised_internal_notification.html
+++ b/leaseslicensing/components/invoicing/templates/leaseslicensing/emails/invoicing/send_new_invoice_raised_internal_notification.html
@@ -6,7 +6,7 @@
         </p>
 
         <p>
-            Before payment can be requested from the proponent, the following steps must be taken:
+            Before payment can be requested from the lease/licence holder, the following steps must be taken:
         </p>
 
         <table>
