--- a/leaseslicensing/static/leaseslicensing/css/base.css
+++ b/leaseslicensing/static/leaseslicensing/css/base.css
@@ -258,7 +258,7 @@ div#app .container h3 {
     justify-content: left;
 }
 
-.swal2-confirm {
+.swal2-confirm:not(.swal2-styled) {
     background-color: #226fbb !important;
 }
 
