Add invoice amount to request for payment email.

--- a/leaseslicensing/components/invoicing/templates/leaseslicensing/emails/invoicing/send_new_invoice_raised_notification.html
+++ b/leaseslicensing/components/invoicing/templates/leaseslicensing/emails/invoicing/send_new_invoice_raised_notification.html
@@ -6,6 +6,7 @@
         </p>
 
         <p>
+            <strong>Amount: ${{ invoice.amount }}</strong>
             <strong>Due Date: {{ invoice.date_due }}</strong>
         </p>
 
