Update new invoice paid email to get department name and abn from settings.

--- a/leaseslicensing/components/invoicing/templates/leaseslicensing/emails/invoicing/send_new_invoice_paid_external_notification.html
+++ b/leaseslicensing/components/invoicing/templates/leaseslicensing/emails/invoicing/send_new_invoice_paid_external_notification.html
@@ -7,8 +7,8 @@
             </p>
 
             <p>
-                <strong>Name:</strong> {{ dbca.name }}<br />
-                <strong>ABN:</strong> {{ dbca.abn }}<br />
+                <strong>Name:</strong> {{ dbca_name }}<br />
+                <strong>ABN:</strong> {{ dbca_abn }}<br />
 
                 <strong>Invoice Number:</strong> {{ invoice.oracle_invoice_number }}<br />
                 <strong>Date Issued:</strong> {{ invoice.date_issued }}<br />
