--- a/leaseslicensing/components/invoicing/templates/leaseslicensing/emails/invoicing/send_invoice_paid_external_notification.html
+++ b/leaseslicensing/components/invoicing/templates/leaseslicensing/emails/invoicing/send_invoice_paid_external_notification.html
@@ -2,7 +2,7 @@
 
 {%  block content %}
             <p>
-                We have received your payment of {{ invoice.amount }} for Invoice {{ invoice.lodgement_number }} in relation to
+                We have received your payment of ${{ invoice.amount }} for Invoice {{ invoice.lodgement_number }} in relation to
                 {{ approval.approval_type }} {{ approval.lodgement_number }}.
             </p>
 
@@ -12,9 +12,9 @@
 
                 <strong>Invoice Number:</strong> {{ invoice.oracle_invoice_number }}<br />
                 <strong>Date Issued:</strong> {{ invoice.date_issued }}<br />
-                <strong>Date Paid:</strong> {{ invoice.date_paid }} inc gst<br />
-                <strong>Amount Received:</strong> {{ invoice.amount }} inc gst<br />
-                <strong>GST Component:</strong> {{ invoice.gst }}<br />
+                <strong>Date Paid:</strong> {{ invoice.date_paid }}<br />
+                <strong>Amount Received:</strong>${{ invoice.amount }} inc gst<br />
+                <strong>GST Component:</strong> ${{ invoice.gst }}<br />
                 <strong>Description:</strong> {{ invoice.description }}<br />
             </p>
 
