--- a/leaseslicensing/templates/webtemplate_dbca/includes/menu_bottom.html
+++ b/leaseslicensing/templates/webtemplate_dbca/includes/menu_bottom.html
@@ -13,7 +13,10 @@
 {% if request.user.is_superuser %}
     <li><a class="dropdown-item" href="{% url 'mgt-commands' %}">Management Commands</a></li>
 {% endif %}
-<li><a class="dropdown-item" href="/ledger-ui/accounts">Manage Account</a></li>
+    <li><a class="dropdown-item" href="/ledger-ui/accounts">Manage Account</a></li>
+{% if is_leaseslicensing_admin_user or request.user.is_superuser %}
+    <li><a class="dropdown-item" href="/internal/organisations">Manage Organisations</a></li>
+{% endif %}
 {% for org in organisations_user_can_admin %}
     <li><a class="dropdown-item" href="/external/organisations/manage/{{org.id}}">Manage {{ org.ledger_organisation_name}} </a></li>
 {% endfor %}
