Bug fix: Correct the finance officer conditions.

--- a/leaseslicensing/templates/webtemplate_dbca/includes/primary_menu.html
+++ b/leaseslicensing/templates/webtemplate_dbca/includes/primary_menu.html
@@ -17,7 +17,7 @@
 
 <ul class="nav navbar-expand-lg navbar-light align-items-center">
 {% if is_internal_login %}
-    {% if is_assessor or is_finance %}
+    {% if is_assessor or is_finance_officer %}
     <li class="nav-item"><a class="nav-link" href="/internal/approvals">Approvals</a></li>
     <li class="nav-item"><a class="nav-link" href="/internal/compliances">Compliances</a></li>
     {% endif %}
@@ -27,10 +27,10 @@
     {% if is_organisation_access_officer %}
     <li class="nav-item"><a class="nav-link" href="/internal/organisations/access">Organisation Access</a></li>
     {% endif %}
-    {% if is_assessor or is_finance %}
+    {% if is_assessor or is_finance_officer %}
     <li class="nav-item"><a class="nav-link" href="/internal/invoices">Invoices</a></li>
     {% endif %}
-    {% if is_assessor or is_approver or is_finance %}
+    {% if is_assessor or is_approver or is_finance_officer %}
     <li class="nav-item"><a class="nav-link" href="/internal/search">Search</a></li>
     {% endif %}
 {% else %}
