--- a/leaseslicensing/templates/webtemplate_dbca/includes/primary_menu.html
+++ b/leaseslicensing/templates/webtemplate_dbca/includes/primary_menu.html
@@ -10,6 +10,7 @@
 {% support_email as support_email %}
 {% is_assessor as is_assessor %}
 {% is_approver as is_approver %}
+{% is_competitive_process_editor as is_competitive_process_editor %}
 {% is_finance_officer as is_finance_officer %}
 {% is_organisation_access_officer as is_organisation_access_officer %}
 {% is_compliance_referee as is_compliance_referee %}
@@ -30,7 +31,7 @@
     {% if is_assessor or is_finance_officer %}
     <li class="nav-item"><a class="nav-link" href="/internal/invoices">Invoices</a></li>
     {% endif %}
-    {% if is_assessor or is_approver or is_finance_officer %}
+    {% if is_assessor or is_approver or is_finance_officer or is_competitive_process_editor %}
     <li class="nav-item"><a class="nav-link" href="/internal/search">Search</a></li>
     {% endif %}
 {% else %}
