--- a/leaseslicensing/templates/webtemplate_dbca/includes/menu_bottom.html
+++ b/leaseslicensing/templates/webtemplate_dbca/includes/menu_bottom.html
@@ -1,6 +1,7 @@
 {% load users %}
 {% load utils %}
 {% is_leaseslicensing_admin as is_leaseslicensing_admin_user %}
+{% is_organisation_access_officer as is_organisation_access_officer %}
 {% is_finance_officer as is_finance_officer %}
 
 
@@ -14,7 +15,7 @@
     <li><a class="dropdown-item" href="{% url 'mgt-commands' %}">Management Commands</a></li>
 {% endif %}
     <li><a class="dropdown-item" href="/ledger-ui/accounts">Manage Account</a></li>
-{% if is_leaseslicensing_admin_user or request.user.is_superuser %}
+{% if is_leaseslicensing_admin_user or is_organisation_access_officer or request.user.is_superuser %}
     <li><a class="dropdown-item" href="/internal/organisations">Manage Organisations</a></li>
 {% endif %}
 {% for org in organisations_user_can_admin %}
