Add financial links to staff_menu_extras.

--- a/leaseslicensing/templates/webtemplate_dbca/includes/staff_menu.html
+++ b/leaseslicensing/templates/webtemplate_dbca/includes/staff_menu.html
@@ -3,9 +3,6 @@
 
 {% if is_finance_officer %}
 <li>
-    <a  class="dropdown-item" target="_blank" href="/admin/">Django Admin</a>
-</li>
-<li>
-    <a  class="dropdown-item" target="_blank" href="{{ LEDGER_UI_URL }}/reports?system_id={{ PAYMENT_SYSTEM_PREFIX }}">Financial Reports</a>
+    <a  class="dropdown-item" target="_blank" href="/admin/">Admin</a>
 </li>
 {% endif %}
